--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\Hayba\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv3-2061274867.properties
+deploy.ant.properties.file=C:\\Users\\Soryu\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv3-1885769990.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Hayba/AppData/Roaming/NetBeans/8.0.2/config/GF_4.1/domain1
-j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
-j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
-user.properties.file=C:\\Users\\Hayba\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+j2ee.server.domain=C:/Users/Soryu/AppData/Roaming/NetBeans/8.0.2/config/GF_4.1/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1\\glassfish;C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1
+selected.browser=Chrome
+user.properties.file=C:\\Users\\Soryu\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
